fixed spacing on signup

--- a/learnlink-ui/src/pages/login.css
+++ b/learnlink-ui/src/pages/login.css
@@ -26,7 +26,7 @@
       font-size: 64px;
       line-height: 1.2;
       text-align: left;
-      margin-bottom: 20px;
+      margin-bottom: 2px;
   }
   .t2 {
     width: 513px;
@@ -35,7 +35,7 @@
     font-size: 18px;
     text-align: left;
     line-height: 1.2;
-    margin-top: 5px;
+    margin-bottom: 2px;
     margin-bottom: 15px;
   }
 
