--- a/learnlink-ui/src/pages/signup.css
+++ b/learnlink-ui/src/pages/signup.css
@@ -25,7 +25,7 @@
       font-size: 64px;
       line-height: 1.2;
       text-align: left;
-      margin-bottom: 20px;
+      margin-bottom: 2px;
   }
   .t2 {
     width: 513px;
@@ -34,7 +34,7 @@
     font-size: 18px;
     text-align: left;
     line-height: 1.2;
-    margin-top: 5px;
+    margin-top: 2px;
     margin-bottom: 15px;
   }
 
